--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,7 @@
 </head>
 
 <body>
-  <div class="site-container">
-    <header class="header">
+  <header class="header">
   <div class="header-topline">
     <div class="container container-narrow">
       <p class="">Complete Your Project for Less With SCS</p>
@@ -48,8 +47,14 @@
     </div>
   </div>
 </header>
+  <main class="main">
+    <section class="hero">
+  <div class="container">
     
   </div>
+</section>
+  </main>
+  
   <script src="js/main.js"></script>
 </body>
 
