--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,11 @@
 </head>
 
 <body>
-  <div class="site-container">
-    @include('html/header.html')
-    @include('html/footer.html')
-  </div>
+  @include('html/header.html')
+  <main class="main">
+    @include('html/hero.html')
+  </main>
+  @include('html/footer.html')
   <script src="js/main.js"></script>
 </body>
 
