--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,5 +1,50 @@
 <section class="hero">
+  <h1 class="visually-hidden">Stair Components & Systems</h1>
   <div class="container">
-    
+    <div class="hero__slider">
+      <div class="hero__slider-item slide">
+        <div class="slide__text">
+          <h2 class="slide__title">
+            Complete Your Project for Less With SCS
+          </h2>
+          <a href="#" class="slide__more">
+            learn more
+          </a>
+        </div>
+        <!-- for cms -->
+        <div class="slide__image">
+          <img src="./images/slide-1.jpg" alt="">
+        </div>
+      </div>
+      <div class="hero__slider-item slide">
+        <div class="slide__text">
+          <h2 class="slide__title">
+            Complete Your Project for Less With SCS
+          </h2>
+          <a href="#" class="slide__more">
+            learn more
+          </a>
+        </div>
+        <!-- for cms -->
+        <div class="slide__image">
+          <img src="./images/slide-1.jpg" alt="">
+        </div>
+      </div>
+      <div class="hero__slider-item slide">
+        <div class="slide__text">
+          <h2 class="slide__title">
+            Complete Your Project for Less With SCS
+          </h2>
+          <a href="#" class="slide__more">
+            learn more
+          </a>
+        </div>
+        <!-- for cms -->
+        <div class="slide__image">
+          <img src="./images/slide-1.jpg" alt="">
+        </div>
+      </div>
+
+    </div>
   </div>
 </section>
