--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   @include('html/header.html')
   <main class="main">
     @include('html/hero.html')
+    @include('html/product.html')
   </main>
   @include('html/footer.html')
   <script src="js/main.js"></script>
