create product slider

--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,74 @@
     </div>
   </div>
 </section>
-    
+    <section class="product">
+  <div class="container container-narrow">
+    <h2 class="product__title title">
+      Product Categories
+    </h2>
+
+    <div class="product__slider product-slider">
+      <div class="product-slider__item">
+        <img src="./images/product-slide-1.jpg" alt="">
+        <a class="product-slider__link" href="#">
+          Stairpans
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Obcaecati, vitae.</p>
+        </a>
+      </div>
+      <div class="product-slider__item">
+        <img src="./images/product-slide-1.jpg" alt="">
+        <a class="product-slider__link" href="#">
+          Stairpans
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Obcaecati, vitae.</p>
+        </a>
+      </div>
+      <div class="product-slider__item">
+        <img src="./images/product-slide-1.jpg" alt="">
+        <a class="product-slider__link" href="#">
+          Stairpans
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Obcaecati, vitae.</p>
+        </a>
+      </div>
+      <div class="product-slider__item">
+        <img src="./images/product-slide-1.jpg" alt="">
+        <a class="product-slider__link" href="#">
+          Stairpans
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Obcaecati, vitae.</p>
+        </a>
+      </div>
+      <div class="product-slider__item">
+        <img src="./images/product-slide-1.jpg" alt="">
+        <a class="product-slider__link" href="#">
+          Stairpans
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Obcaecati, vitae.</p>
+        </a>
+      </div>
+      <div class="product-slider__item">
+        <img src="./images/product-slide-1.jpg" alt="">
+        <a class="product-slider__link" href="#">
+          Stairpans
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Obcaecati, vitae.</p>
+        </a>
+      </div>
+      <div class="product-slider__item">
+        <img src="./images/product-slide-1.jpg" alt="">
+        <a class="product-slider__link" href="#">
+          Stairpans
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Obcaecati, vitae.</p>
+        </a>
+      </div>
+
+
+    </div>
+  </div>
+</section>
   </main>
   
   <script src="js/main.js"></script>
