add manufacture section

--- a/src/html/product-categories.html
+++ b/src/html/product-categories.html
@@ -14,33 +14,33 @@
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-slide-2.jpg" alt="">
         <a class="product-slider__link" href="#">
-          Stairpans
+          Stair Treads
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
             consectetur adipisicing elit. Obcaecati, vitae.</p>
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-slide-3.jpg" alt="">
         <a class="product-slider__link" href="#">
-          Stairpans
+          Walkway Grating
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
             consectetur adipisicing elit. Obcaecati, vitae.</p>
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-slide-4.jpg" alt="">
         <a class="product-slider__link" href="#">
-          Stairpans
+          Landing Pans
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
             consectetur adipisicing elit. Obcaecati, vitae.</p>
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-slide-5.jpg" alt="">
         <a class="product-slider__link" href="#">
-          Stairpans
+          In-fill Panels
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
             consectetur adipisicing elit. Obcaecati, vitae.</p>
         </a>
