--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
   @include('html/header.html')
   <main class="main">
     @include('html/hero.html')
-    @include('html/product.html')
+    @include('html/product-categories.html')
+    @include('html/manufacture.html')
   </main>
   @include('html/footer.html')
   <script src="js/main.js"></script>
