--- a/app/index.html
+++ b/app/index.html
@@ -114,33 +114,33 @@
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-slide-2.jpg" alt="">
         <a class="product-slider__link" href="#">
-          Stairpans
+          Stair Treads
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
             consectetur adipisicing elit. Obcaecati, vitae.</p>
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-slide-3.jpg" alt="">
         <a class="product-slider__link" href="#">
-          Stairpans
+          Walkway Grating
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
             consectetur adipisicing elit. Obcaecati, vitae.</p>
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-slide-4.jpg" alt="">
         <a class="product-slider__link" href="#">
-          Stairpans
+          Landing Pans
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
             consectetur adipisicing elit. Obcaecati, vitae.</p>
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-slide-5.jpg" alt="">
         <a class="product-slider__link" href="#">
-          Stairpans
+          In-fill Panels
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
             consectetur adipisicing elit. Obcaecati, vitae.</p>
         </a>
@@ -164,6 +164,52 @@
 
 
     </div>
+  </div>
+</section>
+    <section class="manufacture">
+  <div class="manufacture__content manufacture-content">
+    <div class="manufacture-content__image">
+      <img src="./images/manufacture-1.jpg" alt="">
+    </div>
+    <div class="manufacture-content__text">
+      <h2 class="manufacture-content__title">
+        Manufacture in square
+      </h2>
+      <h3 class="manufacture-content__subtitle">
+        Products Made The <span>right</span> Way, Products That Fit.
+      </h3>
+      <p class="manufacture-content__descr">
+        Our stairpans and stair treads are manufactured in square to save you precious time during installation. Stair
+        components are designed to sit perfectly between your stringers, eliminating gaps and allowing for fast, clean
+        welds without the need for additional filler. For a quick, clean, cost-effective install, choose Stair
+        Components & Systems.
+      </p>
+      <ul class="manufacture-content__list manufacture-list">
+        <li class="manufacture-list__item">
+          <svg>
+            <use xlink:href="./images/sprite.svg#square"></use>
+          </svg>
+          <h4 class="manufacture-list__title">IN SQUARE</h4>
+        </li>
+        <li class="manufacture-list__item">
+          <svg>
+            <use xlink:href="./images/sprite.svg#fit"></use>
+          </svg>
+          <h4 class="manufacture-list__title">PERFECT FIT</h4>
+        </li>
+        <li class="manufacture-list__item">
+          <svg>
+            <use xlink:href="./images/sprite.svg#fast"></use>
+          </svg>
+          <h4 class="manufacture-list__title">FAST TURNAROUND</h4>
+        </li>
+      </ul>
+
+      <a href="#" class="manufacture-content__link">view MANUFACTURED IN SQUARE</a>
+    </div>
+  </div>
+  <div class="manufacture-bg">
+    <img src="./images/manufacture-bg-1.jpg" alt="">
   </div>
 </section>
   </main>
