add featured section

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     @include('html/hero.html')
     @include('html/product-categories.html')
     @include('html/manufacture.html')
+    @include('html/featured.html')
   </main>
   @include('html/footer.html')
   <script src="js/main.js"></script>
