ready to adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -312,7 +312,164 @@
   </div>
 </section>
   </main>
-  
+  <footer class="footer">
+  <div class="footer__banner banner">
+    <span class="banner__title">
+      QUESTIONS? CALL US!
+    </span>
+    <ul class="banner__list">
+      <li class="banner__item">
+        <a class="banner__link" href="tel:+18002853056">
+          Toll-Free: <span>1 (800) 285-3056</span>
+        </a>
+      </li>
+      <li class="banner__item">
+        <a class="banner__link" href="tel:+7168547633">
+          Local Phone: <span>(716) 854-7633</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div class="container">
+    <ul class="footer__top">
+      <li class="footer__top-item">
+        <svg>
+          <use xlink:href="./images/sprite.svg#delivery"></use>
+        </svg>
+        <span class="footer__top-title">Free Shipping Qualifying Purchases</span>
+      </li>
+      <li class="footer__top-item">
+        <svg>
+          <use xlink:href="./images/sprite.svg#settings"></use>
+        </svg>
+        <span class="footer__top-title">Design Build Services</span>
+      </li>
+      <li class="footer__top-item">
+        <svg>
+          <use xlink:href="./images/sprite.svg#checklist"></use>
+        </svg>
+        <span class="footer__top-title"> Download Stair Systems Catalog</span>
+      </li>
+    </ul>
+
+    <div class="footer__content">
+      <div class="footer__columns footer-about">
+        <img class="footer__logo" src="./images/logo.svg" alt="">
+        <p class="footer__descr">
+          We are a Nationwide manufacturer of standard and custom components for commercial stair systems, including,
+          metal stairpans, perforated metal stairpans, stair treads, landing pans, carrier angles and more.
+        </p>
+        <ul class="footer__info">
+          <li class="footer__info-item">
+            <address>
+              <span>Address:</span>
+              128 Sycamore Street, Buffalo, NY 14204
+            </address>
+          </li>
+          <li class="footer__info-item">
+            <a href="mailto:fab@eberliron.com"><span>Email: </span>fab@eberliron.com</a>
+          </li>
+          <li class="footer__info-item">
+            <a href="fax:+7168541184"><span>Fax: </span>(716) 854-1184</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__columns">
+        <h2 class="footer__columns-title">SCS</h2>
+        <ul class="footer__columns-list footer-list">
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">About</a>
+          </li>
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">News</a>
+          </li>
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">Services</a>
+          </li>
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">Resources</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__columns">
+        <h2 class="footer__columns-title">Quick Links</h2>
+        <ul class="footer__columns-list footer-list">
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">Sync Existing Business Account</a>
+          </li>
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">Create & Sync a New Business Account</a>
+          </li>
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">Download Our Credit Application</a>
+          </li>
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">Submit Tax Exempt Certificate</a>
+          </li>
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">Shipping & Returns</a>
+          </li>
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">Terms & Conditons</a>
+          </li>
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">Privacy Policy</a>
+          </li>
+          <li class="footer-list__item">
+            <a class="footer-list__link" href="#">FAQs</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__columns footer-form">
+        <div class="footer__columns-top">
+          <ul class="footer__columns-social social-list">
+            <li class="social-list__item">
+              <a href="#" target="blank" class="social-list__link">
+                <svg>
+                  <use xlink:href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a href="#" target="blank" class="social-list__link">
+                <svg>
+                  <use xlink:href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <ul class="footer__columns-certificate certificate-list">
+            <li class="certificate__item">
+              <a href="#" class="certificate__link">
+                <img src="./images/authorize.png" alt="">
+              </a>
+            </li>
+            <li class="certificate__item">
+              <a href="#" class="certificate__link">
+                <img src="./images/ssl.png" alt="">
+              </a>
+            </li>
+          </ul>
+        </div>
+        <form class="footer__columns-form form">
+          <h3 class="form__title">
+            Email Sign Up
+          </h3>
+          <h4 class="form__descr">
+            Subscribe receive to our eNewsletter
+          </h4>
+          <input class="form__input" type="text" name="name" placeholder="First Name*">
+          <input class="form__input" type="email" name="email" placeholder="Email Address*">
+          <button class="form__btn btn-reset" type="submit">sign up</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="footer__bottom">
+      Copyright &copy; 2021 Stair Components & Systems. All Rights Reserved | Terms and Conditions
+    </div>
+  </div>
+</footer>
   <script src="js/main.js"></script>
 </body>
 
