--- a/src/html/manufacture.html
+++ b/src/html/manufacture.html
@@ -40,7 +40,8 @@
       <a href="#" class="manufacture-content__link">view MANUFACTURED IN SQUARE</a>
     </div>
   </div>
+  <!-- btw for cms :| img 🤔  -->
   <div class="manufacture-bg">
-    <img src="./images/manufacture-bg-1.jpg" alt="">
+    <div style="background-image: url('./images/manufacture-bg-1.jpg');" class="manufacture-bg__image"></div>
   </div>
 </section>
