--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-  <header class="header">
+  <div class="site-container">
+    <header class="header">
   <div class="header-topline">
     <div class="container container-narrow">
       <p class="">Complete Your Project for Less With SCS</p>
@@ -34,12 +35,15 @@
         <img src="./images/logo.svg" alt="">
       </a>
       <nav class="header__nav menu">
+        <button class="burger btn-reset"></button>
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="#">Products</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Resources</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Quote Request</a></li>
         </ul>
+
+        <!--popup & inline input & link ????-->
         <form action="" class="menu__search search">
           <button type="button" class="search__btn btn-reset"></button>
         </form>
@@ -47,8 +51,8 @@
     </div>
   </div>
 </header>
-  <main class="main">
-    <section class="hero">
+    <main class="main">
+      <section class="hero">
   <h1 class="visually-hidden">Stair Components & Systems</h1>
   <div class="container">
     <div class="hero__slider">
@@ -98,7 +102,7 @@
     </div>
   </div>
 </section>
-    <section class="product">
+      <section class="product">
   <div class="container container-narrow">
     <h2 class="product__title title">
       Product Categories
@@ -166,7 +170,7 @@
     </div>
   </div>
 </section>
-    <section class="manufacture">
+      <section class="manufacture">
   <div class="manufacture__content manufacture-content">
     <div class="manufacture-content__image">
       <img src="./images/manufacture-1.jpg" alt="">
@@ -208,11 +212,12 @@
       <a href="#" class="manufacture-content__link">view MANUFACTURED IN SQUARE</a>
     </div>
   </div>
+  <!-- btw for cms :| img 🤔  -->
   <div class="manufacture-bg">
-    <img src="./images/manufacture-bg-1.jpg" alt="">
+    <div style="background-image: url('./images/manufacture-bg-1.jpg');" class="manufacture-bg__image"></div>
   </div>
 </section>
-    <section class="featured">
+      <section class="featured">
   <div class="container">
     <h2 class="featured__title title">
       Featured Products
@@ -311,8 +316,8 @@
     </ul>
   </div>
 </section>
-  </main>
-  <footer class="footer">
+    </main>
+    <footer class="footer">
   <div class="footer__banner banner">
     <span class="banner__title">
       QUESTIONS? CALL US!
@@ -470,6 +475,7 @@
     </div>
   </div>
 </footer>
+  </div>
   <script src="js/main.js"></script>
 </body>
 
