--- a/src/html/header.html
+++ b/src/html/header.html
@@ -15,12 +15,15 @@
         <img src="./images/logo.svg" alt="">
       </a>
       <nav class="header__nav menu">
+        <button class="burger btn-reset"></button>
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="#">Products</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Resources</a></li>
           <li class="menu__item"><a class="menu__link" href="#">Quote Request</a></li>
         </ul>
+
+        <!--popup & inline input & link ????-->
         <form action="" class="menu__search search">
           <button type="button" class="search__btn btn-reset"></button>
         </form>
