--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,16 @@
 </head>
 
 <body>
-  @include('html/header.html')
-  <main class="main">
-    @include('html/hero.html')
-    @include('html/product-categories.html')
-    @include('html/manufacture.html')
-    @include('html/featured.html')
-  </main>
-  @include('html/footer.html')
+  <div class="site-container">
+    @include('html/header.html')
+    <main class="main">
+      @include('html/hero.html')
+      @include('html/product-categories.html')
+      @include('html/manufacture.html')
+      @include('html/featured.html')
+    </main>
+    @include('html/footer.html')
+  </div>
   <script src="js/main.js"></script>
 </body>
 
