--- a/src/html/product-categories.html
+++ b/src/html/product-categories.html
@@ -6,7 +6,7 @@
 
     <div class="product__slider product-slider">
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-1.jpg" alt="">
         <a class="product-slider__link" href="#">
           Stairpans
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
@@ -14,7 +14,7 @@
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-2.jpg" alt="">
+        <img src="./images/product-2.jpg" alt="">
         <a class="product-slider__link" href="#">
           Stair Treads
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
@@ -22,7 +22,7 @@
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-3.jpg" alt="">
+        <img src="./images/product-3.jpg" alt="">
         <a class="product-slider__link" href="#">
           Walkway Grating
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-4.jpg" alt="">
+        <img src="./images/product-4.jpg" alt="">
         <a class="product-slider__link" href="#">
           Landing Pans
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
@@ -38,7 +38,7 @@
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-5.jpg" alt="">
+        <img src="./images/product-5.jpg" alt="">
         <a class="product-slider__link" href="#">
           In-fill Panels
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
@@ -46,7 +46,7 @@
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-1.jpg" alt="">
         <a class="product-slider__link" href="#">
           Stairpans
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
@@ -54,7 +54,7 @@
         </a>
       </div>
       <div class="product-slider__item">
-        <img src="./images/product-slide-1.jpg" alt="">
+        <img src="./images/product-1.jpg" alt="">
         <a class="product-slider__link" href="#">
           Stairpans
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, eum! Lorem ipsum, dolor sit amet
