--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     </main>
     @include('html/footer.html')
   </div>
-  <script src="js/main.js"></script>
+  <script defer src="js/main.js"></script>
 </body>
 
 </html>
