--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="footer__banner banner">
-    <span class="banner__title">
-      QUESTIONS? CALL US!
-    </span>
+    <h2 class="banner__title">
+      Questions? Call US!
+    </h2>
     <ul class="banner__list">
       <li class="banner__item">
         <a class="banner__link" href="tel:+18002853056">
