--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -107,7 +107,7 @@
         </ul>
       </div>
       <div class="footer__columns footer-form">
-        <div class="footer__columns-top">
+        <div class="footer__columns-social">
           <ul class="footer__columns-social social-list">
             <li class="social-list__item">
               <a href="#" target="blank" class="social-list__link">
